# AgentScribe

./: .gitignore  README.md  pyproject.toml  requirements.txt
agentscribe/: cli.md  cli.py  storage.py
agentscribe/adapters/: __init__.py  base.py  crewai.py
agentscribe/adapters/agentops/: __init__.py  agentops.py
agentscribe/adapters/agno/: __init__.py  agno.md  agno.py
agentscribe/adapters/atomic_agents/: __init__.py  atomic_agents.md  atomic_agents.py
agentscribe/adapters/autogen/: __init__.py  autogen.md  autogen.py
agentscribe/adapters/crewai/: __init__.py  crewai.md  crewai.py
agentscribe/adapters/langgraph/: __init__.py  langgraph.md  langgraph.py
agentscribe/adapters/mcp/: __init__.py  mcp.md  mcp.py
agentscribe/adapters/mlflow/: __init__.py  mlflow.md  mlflow.py
agentscribe/adapters/openinference/: __init__.py  openinference.md  openinference.py
agentscribe/adapters/opentelemetry/: __init__.py  opentelemetry.md  opentelemetry.py
agentscribe/adapters/pydantic_ai/: __init__.py  pydantic_ai.py
agentscribe/adapters/utils/: __init__.py  collector.py  metadata.py  normalization.py  registry.py
agentscribe/core/: __init__.py  canonical.py  formatter.py  validation.py
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
graphify-out/memory/: query_20260601_051851_is_the_agno_live_test_output_a_proper_format_for_f.md
tests/adapters/: test_adapter_conventions.py  test_base.py  test_init.py
tests/adapters/agentops/: test_agentops.py  test_init.py
tests/adapters/agno/: test_agno.py  test_init.py
tests/adapters/atomic_agents/: test_atomic_agents.py  test_init.py
tests/adapters/autogen/: test_autogen.py  test_init.py
tests/adapters/crewai/: test_crewai.py  test_init.py
tests/adapters/langgraph/: test_init.py  test_langgraph.py
tests/adapters/mcp/: test_init.py  test_mcp.py
tests/adapters/mlflow/: test_init.py  test_mlflow.py
tests/adapters/openinference/: test_init.py  test_openinference.py
tests/core/: test_formatter.py
tests/e2e/: test_pydentic_ai.py
tests/e2e/agno/: test_agno_live.py  (+3 more)
tests/integrations/: conftest.py  test_cli_convert.py  test_collectors.py  test_integration_conventions.py  test_storage_local.py
(+15 files in other folders)
